learn this, new and call, apply, bind methods

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     
-    <script src="scope-hoisting/index.js"></script>
+    <!-- <script src="scope-hoisting/index.js"></script>     scope-hoisting -->
+    <script src="oop-seg1/index.js"></script>     
 </body>
 </html>
