--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     
     <!-- <script src="scope-hoisting/index.js"></script>     scope-hoisting -->
-    <script src="oop-seg1/index.js"></script>     
+    <!-- <script src="this-new-call,apply,bind/index.js"></script>     this-new-call,apply,bind -->
 </body>
 </html>
