--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     
     <!-- <script src="scope-hoisting/index.js"></script>     scope-hoisting -->
     <!-- <script src="this-new-call,apply,bind/index.js"></script>     this-new-call,apply,bind -->
+    <script src="closure/index.js"></script>
 </body>
 </html>
