start prototype learning

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <!-- <script src="scope-hoisting/index.js"></script>     scope-hoisting -->
     <!-- <script src="this-new-call,apply,bind/index.js"></script>     this-new-call,apply,bind -->
-    <script src="closure/index.js"></script>
+    <!-- <script src="closure/index.js"></script> closure  -->
+    <script src="prototype/index.js"></script>
 </body>
 </html>
